lib/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from ./lib/Parser.y
-----------------------------------------------------------------------------

state 0 contains 1 shift/reduce conflicts.
state 5 contains 1 shift/reduce conflicts.
state 8 contains 1 shift/reduce conflicts.
state 12 contains 1 shift/reduce conflicts.
state 14 contains 1 shift/reduce conflicts.
state 24 contains 1 shift/reduce conflicts.
state 26 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_diagram -> skewers                          (0)
	skewers -> headline                                (1)
	skewers -> skewers headline                        (2)
	skewers -> skewer                                  (3)
	headline -> action '{' skewer '}'                  (4)
	headline -> action '{' skewer soloId '}'           (5)
	skewer ->                                          (6)
	skewer -> block                                    (7)
	skewer -> skewer block                             (8)
	block -> action                                    (9)
	block -> action '{' skewer '}' '{' skewer '}'      (10)
	block -> action '{' skewer '}' '{' skewer soloId '}'   (11)
	block -> action '{' skewer soloId '}' '{' skewer '}'   (12)
	block -> action '{' skewer soloId '}' '{' skewer soloId '}'   (13)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	action         { TokenAction $$ }
	soloId         { TokenSoloIdentifier $$ }
	'{'            { TokenOCB }
	'}'            { TokenCCB }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_diagram  rule  0
	skewers         rules 1, 2, 3
	headline        rules 4, 5
	skewer          rules 6, 7, 8
	block           rules 9, 10, 11, 12, 13

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_diagram -> . skewers                         (rule 0)

	action         shift, and enter state 7
			(reduce using rule 6)

	%eof           reduce using rule 6

	skewers        goto state 4
	headline       goto state 2
	skewer         goto state 5
	block          goto state 6

State 1

	skewers -> . headline                               (rule 1)

	action         shift, and enter state 3

	headline       goto state 2

State 2

	skewers -> headline .                               (rule 1)

	action         reduce using rule 1
	%eof           reduce using rule 1


State 3

	headline -> action . '{' skewer '}'                 (rule 4)
	headline -> action . '{' skewer soloId '}'          (rule 5)

	'{'            shift, and enter state 12


State 4

	%start_diagram -> skewers .                         (rule 0)
	skewers -> skewers . headline                       (rule 2)

	action         shift, and enter state 3
	%eof           accept

	headline       goto state 11

State 5

	skewers -> skewer .                                 (rule 3)
	skewer -> skewer . block                            (rule 8)

	action         shift, and enter state 10
			(reduce using rule 3)

	%eof           reduce using rule 3

	block          goto state 9

State 6

	skewer -> block .                                   (rule 7)

	action         reduce using rule 7
	soloId         reduce using rule 7
	'}'            reduce using rule 7
	%eof           reduce using rule 7


State 7

	headline -> action . '{' skewer '}'                 (rule 4)
	headline -> action . '{' skewer soloId '}'          (rule 5)
	block -> action .                                   (rule 9)
	block -> action . '{' skewer '}' '{' skewer '}'     (rule 10)
	block -> action . '{' skewer '}' '{' skewer soloId '}'    (rule 11)
	block -> action . '{' skewer soloId '}' '{' skewer '}'    (rule 12)
	block -> action . '{' skewer soloId '}' '{' skewer soloId '}'    (rule 13)

	action         reduce using rule 9
	'{'            shift, and enter state 8
	%eof           reduce using rule 9


State 8

	headline -> action '{' . skewer '}'                 (rule 4)
	headline -> action '{' . skewer soloId '}'          (rule 5)
	block -> action '{' . skewer '}' '{' skewer '}'     (rule 10)
	block -> action '{' . skewer '}' '{' skewer soloId '}'    (rule 11)
	block -> action '{' . skewer soloId '}' '{' skewer '}'    (rule 12)
	block -> action '{' . skewer soloId '}' '{' skewer soloId '}'    (rule 13)

	action         shift, and enter state 10
			(reduce using rule 6)

	soloId         reduce using rule 6
	'}'            reduce using rule 6

	skewer         goto state 15
	block          goto state 6

State 9

	skewer -> skewer block .                            (rule 8)

	action         reduce using rule 8
	soloId         reduce using rule 8
	'}'            reduce using rule 8
	%eof           reduce using rule 8


State 10

	block -> action .                                   (rule 9)
	block -> action . '{' skewer '}' '{' skewer '}'     (rule 10)
	block -> action . '{' skewer '}' '{' skewer soloId '}'    (rule 11)
	block -> action . '{' skewer soloId '}' '{' skewer '}'    (rule 12)
	block -> action . '{' skewer soloId '}' '{' skewer soloId '}'    (rule 13)

	action         reduce using rule 9
	soloId         reduce using rule 9
	'{'            shift, and enter state 14
	'}'            reduce using rule 9
	%eof           reduce using rule 9


State 11

	skewers -> skewers headline .                       (rule 2)

	action         reduce using rule 2
	%eof           reduce using rule 2


State 12

	headline -> action '{' . skewer '}'                 (rule 4)
	headline -> action '{' . skewer soloId '}'          (rule 5)

	action         shift, and enter state 10
			(reduce using rule 6)

	soloId         reduce using rule 6
	'}'            reduce using rule 6

	skewer         goto state 13
	block          goto state 6

State 13

	headline -> action '{' skewer . '}'                 (rule 4)
	headline -> action '{' skewer . soloId '}'          (rule 5)
	skewer -> skewer . block                            (rule 8)

	action         shift, and enter state 10
	soloId         shift, and enter state 19
	'}'            shift, and enter state 20

	block          goto state 9

State 14

	block -> action '{' . skewer '}' '{' skewer '}'     (rule 10)
	block -> action '{' . skewer '}' '{' skewer soloId '}'    (rule 11)
	block -> action '{' . skewer soloId '}' '{' skewer '}'    (rule 12)
	block -> action '{' . skewer soloId '}' '{' skewer soloId '}'    (rule 13)

	action         shift, and enter state 10
			(reduce using rule 6)

	soloId         reduce using rule 6
	'}'            reduce using rule 6

	skewer         goto state 18
	block          goto state 6

State 15

	headline -> action '{' skewer . '}'                 (rule 4)
	headline -> action '{' skewer . soloId '}'          (rule 5)
	skewer -> skewer . block                            (rule 8)
	block -> action '{' skewer . '}' '{' skewer '}'     (rule 10)
	block -> action '{' skewer . '}' '{' skewer soloId '}'    (rule 11)
	block -> action '{' skewer . soloId '}' '{' skewer '}'    (rule 12)
	block -> action '{' skewer . soloId '}' '{' skewer soloId '}'    (rule 13)

	action         shift, and enter state 10
	soloId         shift, and enter state 16
	'}'            shift, and enter state 17

	block          goto state 9

State 16

	headline -> action '{' skewer soloId . '}'          (rule 5)
	block -> action '{' skewer soloId . '}' '{' skewer '}'    (rule 12)
	block -> action '{' skewer soloId . '}' '{' skewer soloId '}'    (rule 13)

	'}'            shift, and enter state 25


State 17

	headline -> action '{' skewer '}' .                 (rule 4)
	block -> action '{' skewer '}' . '{' skewer '}'     (rule 10)
	block -> action '{' skewer '}' . '{' skewer soloId '}'    (rule 11)

	action         reduce using rule 4
	'{'            shift, and enter state 24
	%eof           reduce using rule 4


State 18

	skewer -> skewer . block                            (rule 8)
	block -> action '{' skewer . '}' '{' skewer '}'     (rule 10)
	block -> action '{' skewer . '}' '{' skewer soloId '}'    (rule 11)
	block -> action '{' skewer . soloId '}' '{' skewer '}'    (rule 12)
	block -> action '{' skewer . soloId '}' '{' skewer soloId '}'    (rule 13)

	action         shift, and enter state 10
	soloId         shift, and enter state 22
	'}'            shift, and enter state 23

	block          goto state 9

State 19

	headline -> action '{' skewer soloId . '}'          (rule 5)

	'}'            shift, and enter state 21


State 20

	headline -> action '{' skewer '}' .                 (rule 4)

	action         reduce using rule 4
	%eof           reduce using rule 4


State 21

	headline -> action '{' skewer soloId '}' .          (rule 5)

	action         reduce using rule 5
	%eof           reduce using rule 5


State 22

	block -> action '{' skewer soloId . '}' '{' skewer '}'    (rule 12)
	block -> action '{' skewer soloId . '}' '{' skewer soloId '}'    (rule 13)

	'}'            shift, and enter state 28


State 23

	block -> action '{' skewer '}' . '{' skewer '}'     (rule 10)
	block -> action '{' skewer '}' . '{' skewer soloId '}'    (rule 11)

	'{'            shift, and enter state 24


State 24

	block -> action '{' skewer '}' '{' . skewer '}'     (rule 10)
	block -> action '{' skewer '}' '{' . skewer soloId '}'    (rule 11)

	action         shift, and enter state 10
			(reduce using rule 6)

	soloId         reduce using rule 6
	'}'            reduce using rule 6

	skewer         goto state 27
	block          goto state 6

State 25

	headline -> action '{' skewer soloId '}' .          (rule 5)
	block -> action '{' skewer soloId '}' . '{' skewer '}'    (rule 12)
	block -> action '{' skewer soloId '}' . '{' skewer soloId '}'    (rule 13)

	action         reduce using rule 5
	'{'            shift, and enter state 26
	%eof           reduce using rule 5


State 26

	block -> action '{' skewer soloId '}' '{' . skewer '}'    (rule 12)
	block -> action '{' skewer soloId '}' '{' . skewer soloId '}'    (rule 13)

	action         shift, and enter state 10
			(reduce using rule 6)

	soloId         reduce using rule 6
	'}'            reduce using rule 6

	skewer         goto state 31
	block          goto state 6

State 27

	skewer -> skewer . block                            (rule 8)
	block -> action '{' skewer '}' '{' skewer . '}'     (rule 10)
	block -> action '{' skewer '}' '{' skewer . soloId '}'    (rule 11)

	action         shift, and enter state 10
	soloId         shift, and enter state 29
	'}'            shift, and enter state 30

	block          goto state 9

State 28

	block -> action '{' skewer soloId '}' . '{' skewer '}'    (rule 12)
	block -> action '{' skewer soloId '}' . '{' skewer soloId '}'    (rule 13)

	'{'            shift, and enter state 26


State 29

	block -> action '{' skewer '}' '{' skewer soloId . '}'    (rule 11)

	'}'            shift, and enter state 34


State 30

	block -> action '{' skewer '}' '{' skewer '}' .     (rule 10)

	action         reduce using rule 10
	soloId         reduce using rule 10
	'}'            reduce using rule 10
	%eof           reduce using rule 10


State 31

	skewer -> skewer . block                            (rule 8)
	block -> action '{' skewer soloId '}' '{' skewer . '}'    (rule 12)
	block -> action '{' skewer soloId '}' '{' skewer . soloId '}'    (rule 13)

	action         shift, and enter state 10
	soloId         shift, and enter state 32
	'}'            shift, and enter state 33

	block          goto state 9

State 32

	block -> action '{' skewer soloId '}' '{' skewer soloId . '}'    (rule 13)

	'}'            shift, and enter state 35


State 33

	block -> action '{' skewer soloId '}' '{' skewer '}' .    (rule 12)

	action         reduce using rule 12
	soloId         reduce using rule 12
	'}'            reduce using rule 12
	%eof           reduce using rule 12


State 34

	block -> action '{' skewer '}' '{' skewer soloId '}' .    (rule 11)

	action         reduce using rule 11
	soloId         reduce using rule 11
	'}'            reduce using rule 11
	%eof           reduce using rule 11


State 35

	block -> action '{' skewer soloId '}' '{' skewer soloId '}' .    (rule 13)

	action         reduce using rule 13
	soloId         reduce using rule 13
	'}'            reduce using rule 13
	%eof           reduce using rule 13


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 14
Number of terminals: 4
Number of non-terminals: 5
Number of states: 36
